--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,13 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Course Management{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'courses.css' %}">
+
 </head>
 <body>
     <header>
