homework extra fields initial version

--- a/courses/templates/homework/homework_detail.html
+++ b/courses/templates/homework/homework_detail.html
@@ -9,7 +9,15 @@
   {% if messages %}
     {% for message in messages %}
       <div class="infobox {{ message.tags }}">
-        {{ message }}
+        <p>{{ message }}</p>
+      </div>
+    {% endfor %}
+  {% endif %}
+
+  {% if errors %}
+    {% for error in errors %}
+      <div class="infobox error">
+        <p>{{ error }}</p>
       </div>
     {% endfor %}
   {% endif %}
