--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block title %}Course Management{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'courses.css' %}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 
 <body>
